# BIM-Mobile

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/tbe_cli/: CMakeLists.txt  api_smoke_demo.cpp  main.cpp  tbe_apply_command.cpp
apps/viewer_flutter/: .gitignore  README.md  pubspec.yaml
apps/viewer_flutter/android/app/: build.gradle.kts
apps/viewer_flutter/android/app/src/main/: AndroidManifest.xml
apps/viewer_flutter/android/app/src/main/kotlin/com/example/viewer_flutter/: MainActivity.kt  RenderSceneFilamentHostView.kt  RenderScenePlatformView.kt
apps/viewer_flutter/assets/: render_scene.json  sample_project.json
apps/viewer_flutter/ios/Runner/: AppDelegate.swift  Info.plist  RenderScenePlaceholderView.swift
apps/viewer_flutter/ios/Runner.xcodeproj/: project.pbxproj
apps/viewer_flutter/lib/: main.dart
apps/viewer_flutter/lib/src/: render_scene_editor.dart  render_scene_estimator.dart  render_scene_level_overlay.dart  render_scene_models.dart  render_scene_repository.dart  render_scene_viewport.dart  render_scene_viewport_controller.dart  render_scene_viewport_painter.dart  render_scene_viewport_planar.dart  render_scene_viewport_projection.dart  render_scene_viewport_types.dart  render_scene_viewport_widget.dart  tbe_ffi.dart  viewer_app.dart
apps/viewer_flutter/macos/Runner.xcodeproj/: project.pbxproj
apps/viewer_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/viewer_flutter/macos/Runner/Configs/: AppInfo.xcconfig
apps/viewer_flutter/scripts/: check_android_toolchain.sh
apps/viewer_flutter/test/: widget_test.dart
apps/viewer_next/: README.md  package-lock.json  package.json
apps/viewer_next/app/: ObjViewer.tsx  globals.css  layout.tsx  page.tsx
apps/viewer_next/app/api/edit/: _bridge.ts
apps/viewer_next/app/api/edit/create-wall/: route.ts
apps/viewer_next/app/api/edit/delete-element/: route.ts
apps/viewer_next/app/api/edit/insert-door/: route.ts
apps/viewer_next/app/api/edit/insert-window/: route.ts
apps/viewer_next/app/api/edit/move-opening/: route.ts
apps/viewer_next/app/api/edit/preview-opening-placement/: route.ts
apps/viewer_next/app/api/edit/set-wall-axis/: route.ts
apps/viewer_next/app/api/edit/status/: route.ts
apps/viewer_next/app/api/edit/update-door/: route.ts
apps/viewer_next/app/api/edit/update-wall/: route.ts
apps/viewer_next/app/api/edit/update-window/: route.ts
apps/viewer_next/lib/: openingPlacement.ts  renderScene.ts
apps/viewer_next/public/sample/: debug_report.json  metadata.json  project.json
apps/viewer_next/scripts/: smoke-edit-bridge.mjs
c_basic_building_package/: metadata.json  project.json
c_basic_building_package/debug/: debug_report.json
cmake/: FindOrDisableOCCT.cmake
docs/: api_usage.md  architecture.md  core_v0_1_limitations.md  dependencies.md  engine_mvp_architecture.md  engine_robustness.md  filament_renderer_plan.md  level5_room_solver.md  performance_contract.md  performance_stress.md  project_schema.md  projection_view_architecture.md  quantity_correctness.md  render_scene.md  roadmap.md  spatial_hit_snap.md  viewer_rendering_notes.md
examples/: CMakeLists.txt  c_basic_building.c  cpp_basic_building.cpp
next/: package-lock.json
scripts/: bootstrap_macos.sh  run_viewer_flutter_macos.sh
src/api/: CMakeLists.txt
src/api/include/tbe/api/: EngineApi.hpp  EngineCApi.h
src/api/src/: EngineApi.cpp  EngineCApi.cpp
src/core/: CMakeLists.txt
src/core/include/tbe/core/: Command.hpp  Document.hpp  Element.hpp  GeometryService.hpp  JobSystem.hpp  Project.hpp  StressModel.hpp
src/core/src/: Command.cpp  Document.cpp  DocumentJson.cpp  Element.cpp  GeometryService.cpp  JobSystem.cpp  Project.cpp
tests/: CMakeLists.txt  api_tests.cpp  core_tests.cpp
